# corewa-rs

./: .gitignore  Cargo.toml  README.md  build.sh
asm/: main.rs
assembler/: main.rs
corewa-rs/: Cargo.toml
corewa-rs-assembler/: Cargo.toml
corewa-rs-assembler/src/: main.rs
corewa-rs-term-arena/: Cargo.toml
corewa-rs-term-arena/src/: main.rs  util.rs
corewa-rs-wasm/: Cargo.toml
corewa-rs-wasm/src/: decoder.rs  language.rs  lib.rs  memory.rs  player.rs  process.rs  vm.rs
corewa-rs/benches/: corewa-rs-benchmark.rs
corewa-rs/src/: lib.rs  spec.rs
corewa-rs/src/language/: assembler.rs  compiler.rs  lexer.rs  mod.rs  types.rs
corewa-rs/src/language/parser/: combinator.rs  mod.rs
corewa-rs/src/vm/: decoder.rs  execution_context.rs  instructions.rs  memory.rs  mod.rs  process.rs  program_counter.rs  types.rs  wrapping_array.rs
corewa-rs/tests/: integration_tests.rs
corewa-rs/tests/language/: assembler.rs  lexer.rs  mod.rs  parser.rs
corewa-rs/tests/language/samples/: missing_comment.asm  missing_name.asm
corewa-rs/tests/vm/: fights.rs  mod.rs
corewa-rs/tests/vm/samples/: bigzork.cor  justin_bee.cor  kappa.cor  mise_a_jour_windows95.cor  skynet.cor  sweepmaster.cor  thunder.cor
corewars/: main.rs
src/: assembler.rs  compiler.rs  lexer.rs  lib.rs  parser.rs  spec.rs  types.rs  utils.rs
src/bindings/: champion.rs  decoder.rs  language.rs  memory.rs  mod.rs  player.rs  process.rs  utils.rs  vm.rs
src/language/: assembler.rs  compiler.rs  lexer.rs  mod.rs  types.rs
src/language/parser/: combinator.rs  mod.rs
src/parser/: combinator.rs  mod.rs
src/ui/: mod.rs
src/vm/: decoder.rs  execution_context.rs  instructions.rs  memory.rs  mod.rs  process.rs  program_counter.rs  types.rs  wrapping_array.rs
tests/language/: assembler.rs  lexer.rs  parser.rs
tests/language/samples/: duplicate_comment.asm  duplicate_name.asm
web/: .eslintrc  .prettierrc  Dockerfile  bootstrap.js  corewar.js  corewar_wasm.js  editor.ts  index.html  index.ts  pack-champions.py  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
web/public/: corewar.js  index.html  style.css
web/src/: arena.tsx  bootstrap.js  bootstrap.ts  corewar.d.ts  corewar.js  documentation.md  editor.tsx  global.d.ts  help.tsx  index.html  index.tsx  layout.tsx  main.tsx  markdown.css  renderer.ts  state.ts  style.css  utils.ts  virtual_machine.ts  vm.tsx
web/src/components/: editor.tsx  help.tsx  layout.tsx  panel.tsx  player-color-input.tsx  player-header.tsx  player-id-input.tsx  vm.tsx
web/src/components/panels/: cell.tsx  common.tsx  contenders.tsx  control.tsx  display-settings.tsx  process.tsx  results.tsx  selections.tsx  state.tsx
web/src/state/: corewar.ts  game.ts  options.ts  persistent.ts  player.ts  vm.ts
