[package]
name = "corewar"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
description = "Virtual arena"
repository = "https://github.com/Globidev/corewar-rs"
license = "MIT"
edition = "2018"

[[bin]]
name = "assembler"
path = "assembler/main.rs"

[[bin]]
name = "corewars"
path = "corewars/main.rs"


[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
linked_hash_set = "0.1"
structopt = "0.3"
rand = "0.7"
byteorder = "1.3"

cfg-if = "0.1"
wasm-bindgen = "0.2"

derive_more = "0.15"

console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
lto = true
