[package]
name = "corewar"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
description = "Virtual arena"
repository = "https://github.com/Globidev/corewar-rs"
license = "MIT"
edition = "2018"

[[bin]]
name = "assembler"
path = "assembler/main.rs"

[[bin]]
name = "corewars"
path = "corewars/main.rs"


[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
linked_hash_set = "0.1"
structopt = "0.3"
byteorder = "1.3"
derive_more = "0.15"

cfg-if = "0.1"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
rand = "0.7"

[profile.release]
lto = true
