[package]
name = "corewa-rs"
version = "0.1.0"
authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
description = "Virtual arena"
repository = "https://github.com/Globidev/corewar-rs"
license = "MIT"
edition = "2018"

[dependencies]
byteorder = "1.3"
derive_more = "0.99"
thiserror = "1.0"
enum_dispatch = "0.3"
fxhash = "0.2"
